--- a/.github/workflows/restart_hf_space.yaml
+++ b/.github/workflows/restart_hf_space.yaml
@@ -1,30 +1,29 @@
-name: Restart Hugging Face Space
-
+# .github/workflows/backup-and-restart.yml
+name: Backup and Restart Space
 on:
- schedule:
-   - cron: '0 0 */14 * *' # Runs every 14 days
-   
- workflow_dispatch:  #允许手动
+  schedule:
+    - cron: '0 4 */3 * *'  # 每3天执行一次
+  workflow_dispatch:  # 允许手动触发
 
 jobs:
-  restart-space:
+  backup-and-restart:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
+      
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install huggingface_hub
+          python-version: '3.x'
           
-      - name: Restart Hugging Face Space
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+          
+      - name: Run backup and restart script
         env:
+          WEBDAV_USERNAME: ${{ secrets.WEBDAV_USERNAME }}
+          WEBDAV_PASSWORD: ${{ secrets.WEBDAV_PASSWORD }}
+          WEBDAV_URL: ${{ secrets.WEBDAV_URL }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_USER: ${{ secrets.HF_USER }}
           HF_SPACE: ${{ secrets.HF_SPACE }}
